[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy"
version = "0.1.0"
description = "Fantasy baseball waiver and roster management tools"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "mariadb>=1.1.10",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
fantasy-sync    = "scripts.yahoo_sync:main"
fantasy-espn    = "scripts.espn_forecaster_sync:main"
fantasy-report  = "scripts.pitcher_report:main"
fantasy-run-all      = "scripts.run_all:main"
fantasy-keepalive    = "scripts.token_keepalive:main"
fantasy-batter-sync      = "scripts.batter_sync:main"
fantasy-pitcher-stats    = "scripts.pitcher_stats_sync:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fantasy*", "scripts*"]
